# rss-feed

./: .gitignore  README.md  dependencies.txt  pyproject.toml  requirements.txt
app/: database.py  feeds.py  main.py  utils.py
app/static/: styles.css
app/static/js/: app.js
app/templates/: index.html
src/: app.ts  package-lock.json  package.json  tsconfig.json
