[project]
name = "rss-feed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "annotated-types==0.7.0",
    "anyio==4.6.0",
    "apscheduler>=3.10.4",
    "beautifulsoup4>=4.12.3",
    "certifi==2024.8.30",
    "click==8.1.7",
    "databases>=0.9.0",
    "dnspython==2.6.1",
    "email-validator==2.2.0",
    "fastapi-cli==0.0.5",
    "fastapi==0.115.0",
    "feedparser==6.0.11",
    "h11==0.14.0",
    "httpcore==1.0.6",
    "httptools==0.6.1",
    "httpx==0.27.2",
    "idna==3.10",
    "jinja2==3.1.4",
    "markdown-it-py==3.0.0",
    "markupsafe==2.1.5",
    "mdurl==0.1.2",
    "pydantic-core==2.23.4",
    "pydantic==2.9.2",
    "pygments==2.18.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.12",
    "pyyaml==6.0.2",
    "rich==13.9.2",
    "sgmllib3k==1.0.0",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "sqlalchemy>=2.0.35",
    "starlette==0.38.6",
    "typer==0.12.5",
    "types-beautifulsoup4>=4.12.0.20240907",
    "typing-extensions==4.12.2",
    "uvicorn==0.31.0",
    "uvloop==0.20.0",
    "watchfiles==0.24.0",
    "websockets==13.1",
]

[[tool.mypy.overrides]]
module = "feedparser.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "apscheduler.*"
ignore_missing_imports = true